# ToolboxPlugins

./: .gitignore  CMakeLists.txt  README.md
cmake/: gwtoolboxpp.cmake
plugins/AllowAllDialogs/: AllowAllDialogs.cpp
plugins/Follower/: Follower.cpp  Follower.h
plugins/LongFinger/: LongFinger.cpp
plugins/RawDialogs/: RawDialogs.cpp
plugins/TargetEverything/: TargetEverything.cpp
